[MODORDERS-1214]. Rename & refactor variables and methods, update acq-models